compile to Java 8, but test with Java 11