@@ -19,7 +19,7 @@ import java.util.logging.SimpleFormatter;
 
 public class SeleniumLogger {
     public static final String FORMAT = "%1$tF %1$tT %4$s - %5$s %n";
-    private final List<String> loggedClasses = new ArrayList<>(List.of(RemoteWebDriver.class.getName(), SeleniumManager.class.getName()));
+    private final List<String> loggedClasses = new ArrayList<>(Arrays.asList(RemoteWebDriver.class.getName(), SeleniumManager.class.getName()));
     private Handler handler;
     private Level level = Level.INFO;
     private File file;
